Renamed Study to Analysis

--- a/ohbm-hackathon-slides/banana_hackathon2019.ipynb
+++ b/ohbm-hackathon-slides/banana_hackathon2019.ipynb
@@ -32,7 +32,7 @@
     "* You can now run Banana directly from the command line with data in BIDS format or using docker\n",
     "\n",
     " ```bash\n",
-    "      docker exec -v /RAID1/test_data/:/data ohbm_hackathon_2019/banana \"banana derive /data/bids-test mri.T1wStudy bet brain\"\n",
+    "      docker exec -v /RAID1/test_data/:/data ohbm_hackathon_2019/banana \"banana derive /data/bids-test mri.T1wAnalysis bet brain\"\n",
     " ```\n",
     "\n",
     "\n",
